# OtusAllocator

./: CMakeLists.txt  README.md  buffer.hpp  main.cpp  otusAllocator.cpp  otusAllocator.hpp
allocator/: CMakeLists.txt  otusAllocator.hpp
sList/: simpleList.hpp
src/: CMakeLists.txt  main.cpp
src/allocator/: arrayStrategy.hpp  otusAllocator.hpp  reallocStrategy.hpp
src/sList/: simpleList.hpp
test/: CMakeLists.txt  main_test.cpp
